--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "framer-motion": "^11.3.30",
+    "hamburger-react": "^2.5.1",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-google-button": "^0.8.0",
+    "uvcanvas": "^0.2.1"
   }
 }
