--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@radix-ui/react-avatar": "^1.1.0",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.13.1",
+    "firebase-admin": "^12.4.0",
     "framer-motion": "^11.3.30",
     "hamburger-react": "^2.5.1",
+    "lru-cache": "^11.0.0",
     "next": "14.2.6",
+    "next-absolute-url": "^1.2.2",
     "next-auth": "^4.24.7",
+    "next-firebase-auth": "^1.1.0",
     "react": "^18",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
+    "react-firebaseui": "^6.0.0",
     "react-google-button": "^0.8.0",
     "uvcanvas": "^0.2.1"
   }
