--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@firebase/firestore": "^4.7.1",
     "@radix-ui/react-avatar": "^1.1.0",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "firebase": "^10.13.1",
     "firebase-admin": "^12.4.0",
